syntax = "proto3";
package chatlog;
option go_package = "github.com/sjzar/chatlog/pkg/pb";

// ManagerService provides gRPC interface for WeChat operations
service ManagerService {
  rpc SetLogLevel(SetLogLevelRequest) returns (SetLogLevelResponse);
  rpc Run(RunRequest) returns (RunResponse);
  rpc Switch(SwitchRequest) returns (SwitchResponse);
  rpc StartService(StartServiceRequest) returns (StartServiceResponse);
  rpc StopService(StopServiceRequest) returns (StopServiceResponse);
  rpc SetHTTPAddr(SetHTTPAddrRequest) returns (SetHTTPAddrResponse);
  rpc GetDataKey(GetDataKeyRequest) returns (GetDataKeyResponse);
  rpc DecryptDBFiles(DecryptDBFilesRequest) returns (DecryptDBFilesResponse);
  rpc StartAutoDecrypt(StartAutoDecryptRequest) returns (StartAutoDecryptResponse);
  rpc StopAutoDecrypt(StopAutoDecryptRequest) returns (StopAutoDecryptResponse);
  rpc RefreshSession(RefreshSessionRequest) returns (RefreshSessionResponse);
  rpc CommandKey(CommandKeyRequest) returns (CommandKeyResponse);
  rpc CommandDecrypt(CommandDecryptRequest) returns (CommandDecryptResponse);
  rpc CommandHTTPServer(CommandHTTPServerRequest) returns (CommandHTTPServerResponse);
  rpc GetWeChatInstances(GetWeChatInstancesRequest) returns (GetWeChatInstancesResponse);
  rpc GetKey(GetKeyRequest) returns (GetKeyResponse);
  rpc Decrypt(DecryptRequest) returns (DecryptResponse);
  rpc Backup(BackupRequest) returns (BackupResponse);
}

// 日志级别控制
message SetLogLevelRequest {
  string level = 1; // debug, info, warn, error
}
message SetLogLevelResponse {}

// Account 信息 (对应 wechat.Account)
message Account {
  string name = 1;
  string platform = 2;
  int32 version = 3;
  string full_version = 4;
  string data_dir = 5;
  string key = 6;
  string img_key = 7;
  uint32 pid = 8;
  string exe_path = 9;
  string status = 10;
}

// KeyData 响应
message KeyData {
  string key = 1;
  string img_key = 2;
}

// ==================== 各方法的请求/响应消息 ====================

message RunRequest {
  string config_path = 1;
}
message RunResponse {}

message SwitchRequest {
  Account info = 1;
  string history = 2;
}
message SwitchResponse {}

message StartServiceRequest {}
message StartServiceResponse {}

message StopServiceRequest {}
message StopServiceResponse {}

message SetHTTPAddrRequest {
  string text = 1;
}
message SetHTTPAddrResponse {}

message GetDataKeyRequest {}
message GetDataKeyResponse {}

message DecryptDBFilesRequest {}
message DecryptDBFilesResponse {}

message StartAutoDecryptRequest {}
message StartAutoDecryptResponse {}

message BackupRequest {}
message BackupResponse {}

message StopAutoDecryptRequest {}
message StopAutoDecryptResponse {}

message RefreshSessionRequest {}
message RefreshSessionResponse {}

message CommandKeyRequest {
  string config_path = 1;
  int32 pid = 2;
  bool force = 3;
  bool show_xor_key = 4;
}
message CommandKeyResponse {
  string result = 1;
}

message CommandDecryptRequest {
  string config_path = 1;
  map<string, string> cmd_conf = 2;
}
message CommandDecryptResponse {}

message CommandHTTPServerRequest {
  string config_path = 1;
  map<string, string> cmd_conf = 2;
}
message CommandHTTPServerResponse {}

message GetWeChatInstancesRequest {}
message GetWeChatInstancesResponse {
  repeated Account accounts = 1;
}

message GetKeyRequest {
  string config_path = 1;
  int32 pid = 2;
  bool force = 3;
  bool show_xor_key = 4;
}
message GetKeyResponse {
  KeyData data = 1;
}

message DecryptRequest {
  string config_path = 1;
  map<string, string> cmd_conf = 2;
}
message DecryptResponse {}
